# rustCli

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/handlers/: mod.rs  request_handler.rs
src/models/: http_file.rs  mod.rs
src/ui/: mod.rs  table_renderer.rs
