[package]
name = "rustcli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.10"
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10"
console = "0.15"
indicatif = "0.17"
chrono = "0.4"
glob = "0.3"
